# docker-activity

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  readme.md
.github/: dependabot.yml
.github/workflows/: main-testing.yml  pr-testing  testing.yml
example/: docker-compose.yml  prometheus.yml  vector.toml
src/: error.rs  format.rs  main.rs  model.rs  watcher.rs
src/enrichment/: mod.rs  powercap.rs
src/exporter/: file.rs  mod.rs  socket.rs  stdout.rs
src/format/: csv.rs  json.rs  mod.rs
